# tree-sitter-typescript

./: package-lock.json  pyproject.toml
.github/workflows/: publish.yml
common/: define-grammar.js
tsx/src/: grammar.json  node-types.json
typescript/src/: grammar.json  node-types.json
