[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "manon-tree-sitter-typescript"
description = "TypeScript and TSX grammars for tree-sitter (Manon fork with grammar fixes)"
version = "0.23.3"
keywords = ["incremental", "parsing", "tree-sitter", "typescript", "tsx"]
classifiers = [
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Topic :: Software Development :: Compilers",
  "Topic :: Text Processing :: Linguistic",
  "Typing :: Typed",
]
authors = [
  { name = "Max Brunsfeld", email = "maxbrunsfeld@gmail.com" },
  { name = "Amaan Qureshi", email = "amaanq12@gmail.com" },
]
requires-python = ">=3.9"
license.text = "MIT"
readme = "README.md"

[project.urls]
Homepage = "https://github.com/tree-sitter/tree-sitter-typescript"

[project.optional-dependencies]
core = ["tree-sitter~=0.23"]

[tool.cibuildwheel]
build = "cp39-*"
build-frontend = "build"
